<resources>
    <string name="app_name">OYOFoodApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin">Admin</string>
    <string name="waiter">Waiter</string>
    <string name="clear_orders">Clear Orders</string>
    <string name="settings">Settings</string>
    <string name="order_history">Order History</string>
    <string name="select_a_table">Select a table:</string>
    <string name="show_menu">Show Menu</string>
    <string name="edit_table">Edit Table</string>
    <string name="starter_veg">Starters - Veg</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="delete_order">Delete Order</string>
    <string name="starters_non_veg">Starters - Non - Veg</string>
    <string name="sandwich_burger"><![CDATA[Sandwich & Burger]]></string>
    <string name="main_course_veg">Main Course - Veg</string>
</resources>
