<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable name="food" type="oyo.restaurant.food.view.waiter.order.menu.MenuEnity"/>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_marginStart="8dp"
                  android:layout_marginEnd="8dp"
                  android:padding="2dp"
                  android:layout_width="match_parent"
                  android:gravity="center"
                  android:layout_height="40dp">

        <CheckBox android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="0dp"
                  android:layout_weight="3"
                  android:text="@{food.foodName}"
                  android:layout_height="wrap_content"/>

        <Button android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:textStyle="bold"/>

        <TextView android:layout_width="0dp"
                  android:layout_weight="1"
                  android:textAlignment="center"
                  android:textStyle="bold"
                  android:textSize="24sp"
                  android:text="@string/_0"
                  android:layout_height="wrap_content"/>

        <Button android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/plus"
                android:textStyle="bold"/>

        <ImageButton android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="match_parent"
                     android:src="@drawable/edit"
                     android:scaleType="centerCrop"
                     android:layout_marginStart="16dp"
        />

    </LinearLayout>

</layout>
